2.2-beta:18: Add remote client